@@ -3,6 +3,8 @@
 # In 2019 it was ported to heavy J2EE on Apache with the client still being  HTML
 # In 2020 the server was migrated back to plain Java but sent data packets to the client which was now using JavaScript
 # In 2021 the server was ported to NODE JS which sends the same (huge) JSON packet to the 14 client pages in JavaScript
-# In 2022 server runs NODE JS on Amazon Web Services while client uses JavaScript
+#         new function: search keyword or account in all historic transactions
+#         new function: status page of all accounts and recent transactions
+# In 2022 server runs NODE JS on Amazon Web Services while client uses JavaScript and another client uses React
 
-# being ported to React
+
